Numbers/services.yml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-svc
spec:
  selector:
    app: maintenance
  ports:
    - port: 80
      targetPort: 80
