Numbers/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-maintenance-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: your-app.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maintenance-svc
            port:
              number: 80
